add button and link to next story below english story and add link in menu to storytime

--- a/english.html
+++ b/english.html
@@ -346,6 +346,20 @@
                 <canvas id="confetti"></canvas>
             </div>
         </div>
+
+        <div class="container text-center">
+            <div class="row row-col-2">
+                <div class="col-12">
+                    <div class="homepage-card">
+                        <h5 class="card-header">Vocabulary</h5>
+                        <div class="card-body-main">
+                            <h5 class="card-title">Bubbles blow up</h5>
+                            <a href="bubbles.html" class="btn btn-warning btn-sm link-pages">Is that true?</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 <!-- retunr to top button -->
         <div id="toTopBtn">
             <button onclick="toTop()">Back to top</button>
