--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="contact.html">Contact us!</a>
-                <li>
+                <li><a href="english.html">Storytime</a></li>
+                <li><a href="contact.html">Contact us!</a></li>    
             </ul>
         </nav>
     </header>
