--- a/english.html
+++ b/english.html
@@ -279,7 +279,7 @@
                     <div class="col-sm-12 col-md-8, col-lg-6 align-self-center">
                         <div class="quiz-section" id="quiz3">
                             <h2>Quiz: Trust with the Fox</h2>
-                            <p>Why did Lola decide to help the fox?</p>
+                            <p style="color: white;">Why did Lola decide to help the fox?</p>
                             <label><input type="radio" name="quiz3" value="1"> Because the fox begged her to
                                 help.</label>
                             <label><input type="radio" name="quiz3" value="2"> Because she trusted her instincts and saw
