change color for cards

--- a/english.html
+++ b/english.html
@@ -146,7 +146,7 @@
                     <div class="col-sm-12 col-md-8, col-lg-6 align-self-center">
                         <div class="quiz-section" id="quiz1">
                             <h2>Quiz: Patience with Percy</h2>
-                            <p>What was Percy’s problem?</p>
+                            <p style="color: white;">What was Percy’s problem?</p>
                             <label><input type="radio" name="quiz1" value="1"> He lost his way in the forest.</label>
                             <label><input type="radio" name="quiz1" value="2"> He lost his hat.</label>
                             <label><input type="radio" name="quiz1" value="3"> He was hungry.</label>
@@ -205,7 +205,7 @@
                     <div class="col-sm-12 col-md-8, col-lg-6 align-self-center">
                         <div class="quiz-section" id="quiz2">
                             <h2>Quiz: Hope with Butter</h2>
-                            <p>What did Lola tell Butter to give her hope?</p>
+                            <p style="color: white;">What did Lola tell Butter to give her hope?</p>
                             <label><input type="radio" name="quiz2" value="1"> That she would grow wings someday and become
                                 a
                                 butterfly.</label>
