create thank you page, add background to hero text

--- a/english.html
+++ b/english.html
@@ -49,7 +49,7 @@
         <section>
             <div id="hero">
                 <h1>Join me on my way to school.</h1>
-                <h2 style="color: white; text-align: center;">Adventure awaits!</h2>
+                <h2 style="color: white; text-align: center; background-color: rgba(217, 144, 7, .4);">Adventure awaits!</h2>
             </div>
         </section>
 
