add thank you page details and styling

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
         <!-- contact form with ficticious details-->
          <div id="contact-form">
         <h3>Send us a message!</h3>
-        <form action="404.html" method="get">
+        <form action="thank-you.html" method="get">
             Name: <br>
             <input type="text" name="name" required> <br>
 
