--- a/bubbles.html
+++ b/bubbles.html
@@ -50,7 +50,7 @@
     </header>
     <main>
         <div id="hero2">
-            <h1>Come see if Bubbles blow up!</h1>
+            <h1 style="background-color: rgba(217, 144, 7, .4);">Come see if Bubbles blow up!</h1>
         </div>
 
         <section>
